fix chat names with emoji's being clipped

--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
@@ -69,7 +69,7 @@
   display: flex;
   flex: 1;
   flex-flow: row;
-  line-height: 1;
+  line-height: 1.2;
 
   & + .message {
     margin-top: 0;
